public abstract class SpecialSkill extends AbstractAction {
    public SpecialSkill(String name) {
        super(name);
    }
}
