@startuml
skinparam classAttributeIconSize 0

note as Legend
  <b>Legend</b>
  ----
  Inheritance (extends)
  Implementation (implements)
  Dependency (uses)
end note

class ExtendsExample
class ExtendsExample2
ExtendsExample2 --|> ExtendsExample

interface ImplementsExample
class ImplementsExample2
ImplementsExample <|.. ImplementsExample2

class DependencyExample
class DependencyExample2
DependencyExample ..> DependencyExample2


' Combatant hierarchy
abstract class Combatant {
    -name : String
    -maxHp : int
    -currentHp : int
    -attack : int
    -defense : int
    -speed : int
    -statusEffects : List<StatusEffect>
    +Combatant(name : String, maxHp : int, attack : int, defense : int, speed : int)
    +getAvailableActions() : List<Action>
    +takeDamage(amount : int) : void
    +heal(amount : int) : void
    +isAlive() : boolean
    +addStatusEffect(effect : StatusEffect) : void
    +removeExpiredEffects() : void
}

abstract class Player {
    -items : List<Item>
    -specialSkillCooldown : int
    +Player(...)
    +canUseSpecialSkill() : boolean
    +resetCooldown() : void
    +tickCooldown() : void
    +useSpecialSkill(targets : List<Combatant>) : void
}

abstract class Enemy {
    +Enemy(...)
}

class Warrior {
    +Warrior(...)
    +getAvailableActions() : List<Action>
    +useSpecialSkill(targets : List<Combatant>) : void
}

class Wizard {
    +Wizard(...)
    +getAvailableActions() : List<Action>
    +useSpecialSkill(targets : List<Combatant>) : void
}

class Goblin {
    +Goblin(...)
    +getAvailableActions() : List<Action>
}

class Wolf {
    +Wolf(...)
    +getAvailableActions() : List<Action>
}

Player --|> Combatant
Enemy --|> Combatant
Warrior --|> Player
Wizard --|> Player
Goblin --|> Enemy
Wolf --|> Enemy

' Item hierarchy
interface Item {
    +getName() : String
    +use(user : Player) : void
}

abstract class AbstractItem {
    -name : String
    -consumed : boolean
    +getName() : String
    +isConsumed() : boolean
    #markConsumed() : void
}

class Potion {
    +use(user : Player) : void
}

class PowerStone {
    +use(user : Player) : void
}

class SmokeBomb {
    +use(user : Player) : void
}

Item <|.. AbstractItem
AbstractItem <|-- Potion
AbstractItem <|-- PowerStone
AbstractItem <|-- SmokeBomb

' Status Effect hierarchy
interface StatusEffect {
    +apply(target : Combatant) : void
    +isExpired() : boolean
    +getName() : String
}

abstract class AbstractStatusEffect {
    -name : String
    -duration : int
    +getName() : String
    +isExpired() : boolean
    #decrementDuration() : void
}

class StunEffect {
    +apply(target : Combatant) : void
}

class DefendEffect {
    +apply(target : Combatant) : void
}

class SmokeBombEffect {
    +apply(target : Combatant) : void
}

class ArcaneBlastEffect {
    +apply(target : Combatant) : void
}

StatusEffect <|.. AbstractStatusEffect
AbstractStatusEffect <|-- StunEffect
AbstractStatusEffect <|-- DefendEffect
AbstractStatusEffect <|-- SmokeBombEffect
AbstractStatusEffect <|-- ArcaneBlastEffect

' Action hierarchy
interface Action {
    +execute(user : Combatant, targets : List<Combatant>) : void
    +getName() : String
}

interface PlayerAction {
    +execute(user : Player, targets : List<Combatant>) : void
}

abstract class AbstractAction {
    -name : String
    +getName() : String
}

class BasicAttack {
    +execute(user : Combatant, targets : List<Combatant>) : void
}

class Defend {
    +execute(user : Combatant, targets : List<Combatant>) : void
}

class ItemAction {
    -item : Item
    +ItemAction(item : Item)
    +execute(user : Player, targets : List<Combatant>) : void
}

class SpecialSkill {
    +execute(user : Player, targets : List<Combatant>) : void
}

Action <|.. AbstractAction
PlayerAction --|> Action
AbstractAction <|-- BasicAttack
AbstractAction <|-- Defend
AbstractAction <|-- ItemAction
AbstractAction <|-- SpecialSkill
PlayerAction <|.. ItemAction
PlayerAction <|.. SpecialSkill

' UI Layer
interface GameUI {
    +displayMessage(message : String) : void
    +displayBattleStatus(combatants : List<Combatant>) : void
    +getPlayerAction(actions : List<Action>) : Action
    +getPlayerTarget(targets : List<Combatant>) : Combatant
    +displayVictory(stats : GameStats) : void
    +displayDefeat(stats : GameStats) : void
}

class ConsoleUI {
    -scanner : Scanner
    +displayMessage(message : String) : void
    +displayBattleStatus(combatants : List<Combatant>) : void
    +getPlayerAction(actions : List<Action>) : Action
    +getPlayerTarget(targets : List<Combatant>) : Combatant
    +displayVictory(stats : GameStats) : void
    +displayDefeat(stats : GameStats) : void
}

GameUI <|.. ConsoleUI

' Engine Layer
interface TurnOrderStrategy {
    +determineTurnOrder(combatants : List<Combatant>) : List<Combatant>
}

class SpeedBasedOrder {
    +determineTurnOrder(combatants : List<Combatant>) : List<Combatant>
}

class BattleEngine {
    -player : Player
    -enemies : List<Enemy>
    -turnOrderStrategy : TurnOrderStrategy
    -ui : GameUI
    +BattleEngine(player : Player, enemies : List<Enemy>, turnOrderStrategy : TurnOrderStrategy, ui : GameUI)
    +startBattle() : void
    +processTurn(combatant : Combatant) : void
    +isGameOver() : boolean
    +getWinner() : String
}

TurnOrderStrategy <|.. SpeedBasedOrder

' Level and GameConfig
class Level {
    -levelNumber : int
    -difficulty : String
    -initialEnemies : List<Enemy>
    -backupEnemies : List<Enemy>
    +Level(levelNumber : int, difficulty : String)
    +getLevelNumber() : int
    +getDifficulty() : String
    +getInitialEnemies() : List<Enemy>
    +getBackupEnemies() : List<Enemy>
    +hasBackupSpawn() : boolean
}

class GameConfig {
    -selectedPlayer : Player
    -selectedLevel : Level
    -selectedItems : List<Item>
    +GameConfig(player : Player, level : Level, items : List<Item>)
    +getPlayer() : Player
    +getLevel() : Level
    +getItems() : List<Item>
}

' Connections between layers
BattleEngine ..> TurnOrderStrategy
BattleEngine ..> GameUI
BattleEngine ..> Combatant
BattleEngine ..> GameConfig
GameConfig ..> Player
GameConfig ..> Level
Player ..> Item
Combatant ..> StatusEffect
Combatant ..> Action
ItemAction ..> Item
@enduml
